validate index.html

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <div class="container">
       
       <div class='cols' style="padding: 40px 0 0 40px;">
-        <img src="ava.jpg" alt="avatar" height="300" width="300">
+        <img src="assets/ava.jpg" alt="avatar" height="300" width="300">
 
         <aside>
           <div id="contacts">
             <h2 style="text-align: center;">C O N T A C T</h2>
-            <ul>
-              <li><a href="mailto:ruzanoff2009@yandex.by">ruzanoff2009@yandex.by</a> </li> <br>
-              <li> Phone number: +375232491513 </li><br>
+            <ul class="ul-contacts">
+              <li><a href="mailto:ruzanoff2009@yandex.by">ruzanoff2009@yandex.by</a> </li> 
+              <li> +375232491513 </li>
               <li> Homel, Belarus</li>
             </ul>
           </div>
@@ -59,7 +59,7 @@
               <h2 id="about-me">ABOUT ME</h2>
               <p>27 y.o. I think that working in programming and computer science is the highest degree
                   of development and a <b>truly smart and beautiful job</b> at the present time. I'm
-                  fast learner and really like to do it. <br> English-level A2.</p> 
+                  fast learner and really like to do it. <br> <b> English-level A2.</b></p> 
             </section>
             <section>
               <h2 id="expirience">EXPIRIENCE</h2>
@@ -120,13 +120,13 @@ function primeFactors(n) {
               
               <div class="projects">
                 <a href="https://passagyr69.github.io/jsClock/"><div class="cl">
-                  <img src="assets/clock.png" alt="clock" class="clock" height="100px" width="100px">
+                  <img src="assets/clock.png" alt="clock" class="clock" height="150" width="150">
                 </div></a>
               </div>
 
               <div class="projects">
                 <a href="https://passagyr69.github.io/whack-a-mole/">
-                  <div class="mo" ><img src="assets/whack-a-mole.png" alt="whack-a-mole" class="mole" height="100px" width="100px"></div>
+                  <div class="mo" ><img src="assets/whack-a-mole.png" alt="whack-a-mole" class="mole" height="150" width="150"></div>
                 </a>
               </div>
             </section>
